# vbpub

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  README.md  build-and-push-all.sh  ciu.env  cmru.build.sh  cmru.cleanup.sh  cmru.publish.sh  cmru.py  cmru.release.sh  cmru.sample.toml  cmru.status.sh  cmru.toml  desktop-analysis-report-20260221-172559.md  release-all.py  release-runner.py  release.sample.toml  requirements.txt  scaling-report-20260219-144528.md  scaling-report-20260219-144812.md
ciu/: .gitignore  .gitignored.ciu  KNOWN_ISSUES_TODO_BACKLOG.md  README.md  build-ciu-wheel.sh  build-push.toml  build-wheel.py  publish-and-validate.sh  publish-wheel.py  pyproject.toml  run-ciu-tests.py  run-ciu-tests.sh
ciu-forge/: build-push.toml  ciu-forge.toml  pyproject.toml
ciu-forge/scripts/: publish-wheel.py
ciu-forge/tests/: test_github_resolve.py  test_resolve_format.py  test_semver.py  test_version_git.py
ciu/docs/: ARCHITECTURE.md  CIU-BUILD-PROPOSAL.md  CIU-DEPLOY.md  CIU.md  CONFIG.md  FEATURES.md  MIGRATION-V2.md  README.md  SPEC.md
ciu/handoff/: CIU-HIGH-RISK-COVERAGE-PACKET.md  P-physical-root-mount-table.md  ciu-physical-root-LOG.md  ciu-physical-root-REPORT.md
ciu/test-repo/: README.md  ciu-global.defaults.toml.j2  ciu.global.defaults.toml.j2  ciu.global.toml.j2
ciu/tools/: cleanup-and-validate.sh  publish-and-validate.sh  publish-wheel-release.py  run-ciu-tests.sh  validate-and-publish.sh  validate-wheel-latest.py
cmru/: KNOWN_ISSUES_TODO_BACKLOG.md  README.md  build-push.toml  cmru.toml  pyproject.toml
cmru/docs/: SPEC.md
cmru/packaging/: cmru-agent.service
cmru/scripts/: publish-wheel.py
cmru/templates/: get.py.tmpl  get.sh.tmpl
cmru/tests/: conftest.py  test_agent_controller.py  test_builtin_handlers.py  test_bundle_manifest_sign.py  test_cleanup.py  test_cli_dispatch.py  test_ghcr.py  test_github_resolve.py  test_installer.py  test_release_profiles.py  test_resolve_format.py  test_semver.py  test_variants.py  test_version_git.py
groop/: CONTRACTS.md  MEASUREMENTS.md  README.md  TUI-SPEC-REVIEW.md  TUI-SPEC.md  pyproject.toml
groop/.handoffctl/: project.toml
groop/.nyxloom/: project.toml
groop/docs/: ARCHITECTURE.md  BACKLOG.md  BPF-NETWORK-ACCOUNTING.md  BRANCH-DISPOSITION.md  COMPRESSED-SWAP.md  DAEMON.md  DECISIONS-INBOX.md  INSPECT-FILES.md  LIFECYCLE-ADAPTERS.md  OPERATIONS.md  OPERATOR-QUESTIONS.md  RELEASE-READINESS.md  ROADMAP.md  STATUS.md  WEB-UI-SCOPING.md
groop/handoff/: GROOP-OBSERVABILITY-DISCUSSION.md  P1-collector-core.md  P10-incident-snapshots.md  P11-damon-paddr.md  P12-release-hardening-acceptance.md  P13-ui-navigation-replay-polish.md  P14-damon-modal-live-acceptance.md  P15-snapshot-enrichment.md  P16-daemon-read-broker-spike.md  P17-bpf-provider-measurement-gate.md  P18-bpf-provider-implementation.md  P19-zram-swap-backend-awareness.md  P2-record-replay.md  P20-daemon-attach-mode.md  P21-admin-action-gating-skeleton.md  P22-daemon-deployment-preflight.md  P23-zram-device-drilldown.md  P24-replay-timestamp-jump.md  P25-daemon-install-plan.md  P26-snapshot-progress-ui.md  P27-swap-refault-aliases.md  P28-io-cap-saturation.md  P29-inspect-files-safety-skeleton.md  P3-network-providers.md  P30-daemon-default-client.md  P31-daemon-client-error-guidance.md  P32-daemon-status-command.md  P33-release-smoke-harness.md  P34-host-device-banner.md  P35-acceptance-steady-harness.md  P36-cpu-sparkline-surface.md  P37-network-loss-diagnostics.md  P38-tui-smoke-evidence.md  P39-release-readiness-ledger.md  P4-origin-drift.md  P40-textual-8-test-compatibility.md  P41-rendered-replay-fidelity.md  P42-daemon-bpf-snapshot-bridge.md  P43-textual-current-baseline.md  P44-daemon-paddr-lifecycle.md  (+69 more)
groop/pwmcp/: README.md  UPSTREAM.toml  ciu.compose.yml.j2  ciu.defaults.toml.j2  ciu.global.toml.j2  ciu.toml.j2  pwmcp.contract.json
groop/tests/: conftest.py  ensure_inspect_fixtures.py  test_acceptance.py  test_actions.py  test_aliases.py  test_attach_cli.py  test_bpf_gate.py  test_ciu_metadata.py  test_collector.py  test_compare.py  test_daemon_bpf_snapshot.py  test_daemon_broker.py  test_daemon_client.py  test_daemon_client_p63.py  test_daemon_client_p66.py  test_daemon_component_health.py  test_daemon_deploy.py  test_daemon_http_gateway.py  test_daemon_p51.py  test_daemon_p52.py  test_daemon_paddr_lifecycle.py  test_daemon_status.py  test_damon_control.py  test_damon_paddr.py  test_damon_passive.py  test_diag.py  test_dockerjoin.py  test_gate_environment.py  test_gpu.py  test_grouping.py  test_grouping_ui.py  test_headless_record.py  test_host_device.py  test_host_swap.py  test_inspect_files.py  test_io_cap_saturation.py  test_mcp_server.py  test_model_registry.py  test_network_providers.py  test_origin.py  (+25 more)
handoffctl2/: .gitignore  README.md  REVIEW-OF-DRAFT1.md  exec-handoffctl.py  pyproject.toml  routes.host.toml
handoffctl2/controller/: Dockerfile  docker-compose.yml
handoffctl2/docs/: ARCHITECTURE.md  EVOLUTION.md  ROADMAP.md  SPEC.md  SPIKE-multi-stack.md
handoffctl2/handoff/: P01-frontmatter-lint.md  P02-reconcile.md  P03-adapters.md  P04-wrapper.md  P05-render.md  P06-notify.md  P07-decisions.md  P08-doctor.md  P09-daemon.md  P10-cli.md  (+13 more)
nyxloom/: .mcp.json  README.md  REVIEW-OF-DRAFT1.md  ciu.global.defaults.toml.j2  exec-nyxloom.py  pyproject.toml  routes.host.toml
playwright-mcp/: .env.sample  Dockerfile  README.md  build-client-wheel.py  build-client-wheel.sh  build-images.py  build-push.toml  bundle.toml  ciu.defaults.toml.j2  docker-bake.hcl  docker-compose.yml.j2  mcp_server.py  publish-client-wheel-and-validate.py  publish-client-wheel.py  publish-client-wheel.sh  push-images.py  pyproject.toml  release-and-upload.py  release-stack-bundle.py  requirements.root.txt  run-client-tests.py  run-client-tests.sh  upload-release-assets.py  usage-demo.py  validate-client-wheel-latest.py  ws_client.py  ws_server.py
release-manager/: EXAMPLES.md  README.md  pyproject.toml  release.sample.toml
topos/: CONTRACTS.md  MEASUREMENTS.md  README.md  TUI-SPEC.md  ciu.global.defaults.toml.j2  pyproject.toml
(+2087 files in other folders)
