# Build toolchain is pinned exactly so wheel builds are reproducible
# (same toolchain + SOURCE_DATE_EPOCH → identical sha256). See docs/VERSIONING.md.
[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0", "setuptools_scm==10.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "ciu-forge"
dynamic = ["version"]
description = "Build, publish, and release orchestration for CIU-family monorepos."
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Volker Badziong"}]
dependencies = []

[project.scripts]
ciu-forge = "ciu_forge.cli:main"
# vbpub-release shim: kept for transition until P6 migration of all consumers.
vbpub-release = "release_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# Version is derived from git tags by setuptools-scm (no clock, no manual bump).
# Release = annotated tag `ciu-forge-vX.Y.Z`; untagged = `X.Y.(Z+1).devN+g<sha>`.
[tool.setuptools_scm]
root = ".."
tag_regex = "^ciu-forge-v(?P<version>[0-9].*)$"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "ciu-forge-v*"]
