[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ciu"
dynamic = ["version"]
description = "CIU deployment CLI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Volker Badziong"}]
dependencies = [
	"Jinja2>=3.1.2",
	"PyYAML>=6.0.1",
	"tomli>=2.0.0",
	"tomli_w>=1.0.0",
]

[tool.setuptools.dynamic]
version = {attr = "ciu.__version__"}

[project.scripts]
ciu = "ciu.cli:main"
ciu-deploy = "ciu.deploy:main"
