# Build toolchain is pinned exactly so wheel builds are reproducible
# (same toolchain + SOURCE_DATE_EPOCH → identical sha256). See docs/VERSIONING.md.
[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0", "setuptools_scm==10.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "ciu"
dynamic = ["version"]
description = "CIU — Container Infrastructure Utility (compose · init · up)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Volker Badziong"}]
dependencies = [
	"Jinja2>=3.1.2",
	"PyYAML>=6.0.1",
	"tomli_w>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# Version is derived from git tags by setuptools-scm (no clock, no manual bump).
# Release = annotated tag `ciu-vX.Y.Z`; untagged commit = `X.Y.(Z+1).devN+g<sha>`.
# ciu MAJOR tracks the SPEC MAJOR (SPEC 2.0.0 → seeded ciu-v2.0.0).
[tool.setuptools_scm]
root = ".."
tag_regex = "^ciu-v(?P<version>[0-9].*)$"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "ciu-v*"]
version_file = "src/ciu/_version.py"
fallback_version = "2.0.0"

[project.scripts]
ciu = "ciu.cli:main"
