# Build toolchain is pinned exactly so wheel builds are reproducible
# (same toolchain + SOURCE_DATE_EPOCH → identical sha256). See docs/VERSIONING.md.
[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0", "setuptools_scm==10.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "cmru"
dynamic = ["version"]
description = "CMRU — Configurable Multi Release Utility for CIU-family monorepos."
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Volker Badziong"}]
dependencies = []

[project.scripts]
cmru = "cmru.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

# Version is derived from git tags by setuptools-scm (no clock, no manual bump).
# Release = annotated tag `cmru-vX.Y.Z`; untagged = `X.Y.(Z+1).devN+g<sha>`.
[tool.setuptools_scm]
root = ".."
tag_regex = "^cmru-v(?P<version>[0-9].*)$"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "cmru-v*"]
fallback_version = "0.2.0"
