[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "groop"
version = "0.1.0"
description = "Host pressure inspector and cgroup forensics collector"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
zstandard = ["zstandard>=0.22"]

[project.scripts]
groop = "groop.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
