[project]
name = "handoffctl"
version = "0.1.0a0"
description = "Files-first, daemon-supervised control plane for role-separated AI-assisted development"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6", "jsonschema>=4"]

[project.scripts]
handoffctl = "handoffctl.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
handoffctl = ["schemas/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
