[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-mcp-client"
dynamic = ["version"]
description = "WebSocket client for Playwright MCP Standalone Service"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Volker Badziong" }]
keywords = ["playwright", "mcp", "websocket", "testing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "websockets>=13.0"
]

[project.urls]
Homepage = "https://github.com/volkb79-2/vbpub/tree/main/playwright-mcp"
Source = "https://github.com/volkb79-2/vbpub"
Documentation = "https://github.com/volkb79-2/vbpub/tree/main/playwright-mcp/docs"

[project.scripts]
pwmcp = "playwright_mcp_client.cli:main"

[tool.setuptools.dynamic]
version = { attr = "playwright_mcp_client.version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["playwright_mcp_client"]
