# RETIRED (P6): release_manager package was promoted to ciu-forge in P1-P6.
# This directory is kept for historical docs only (EXAMPLES.md, release.sample.toml).
# Install `ciu-forge` instead: pipx install ciu_forge-*.whl
# Entry point: ciu-forge run  (or vbpub-release as a backward-compat alias in ciu-forge).

[project]
name = "vbpub-release-manager"
version = "0.1.0"
description = "RETIRED: superseded by ciu-forge. See ciu-forge/pyproject.toml."
requires-python = ">=3.11"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
