# RETIRED (P6): release_manager package was promoted to cmru in P1-P6.
# This directory is kept for historical docs only (EXAMPLES.md, release.sample.toml).
# Install `cmru` instead: pipx install cmru-*.whl
# Entry point: cmru run  (or vbpub-release as a backward-compat alias in cmru).

[project]
name = "vbpub-release-manager"
version = "0.1.0"
description = "RETIRED: superseded by cmru. See cmru/pyproject.toml."
requires-python = ">=3.11"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
