[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "topos"
version = "0.1.0"
description = "Host pressure inspector and cgroup forensics collector"
requires-python = ">=3.11"
dependencies = ["textual>=8.2.8"]

[project.optional-dependencies]
zstandard = ["zstandard>=0.22"]
mcp = ["mcp>=1.28.0"]
dev = [
    "topos[zstandard]",
    "topos[mcp]",
    "pytest>=8.0",
]

[project.scripts]
topos = "topos.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
topos = ["assets/systemd/topos.service", "assets/systemd/topos.tmpfiles"]
