# Pinned build toolchain for reproducible wheels (see docs/VERSIONING.md).
[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0", "setuptools_scm==10.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "pwmcp-client"
dynamic = ["version"]
description = "WebSocket client for PWMCP server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Volker Badziong" }]
keywords = ["playwright", "mcp", "websocket", "testing", "pwmcp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "websockets>=13.0",
  "pwmcp-shared"
]

[project.urls]
Homepage = "https://github.com/volkb79-2/vbpub/tree/main/pwmcp"
Source = "https://github.com/volkb79-2/vbpub"
Documentation = "https://github.com/volkb79-2/vbpub/tree/main/pwmcp/docs"

[project.scripts]
pwmcp = "pwmcp_client.cli:main"

# Version derived from git tag `pwmcp-client-vX.Y.Z` by setuptools-scm.
[tool.setuptools_scm]
root = "../.."
tag_regex = "^pwmcp-client-v(?P<version>[0-9].*)$"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "pwmcp-client-v*"]
version_file = "src/pwmcp_client/_version.py"
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pwmcp_client"]
