# Pinned build toolchain for reproducible wheels (see docs/VERSIONING.md).
[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0", "setuptools_scm==10.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "pwmcp-server"
dynamic = ["version"]
description = "Standalone PWMCP server (WebSocket + MCP + health endpoints)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Volker Badziong" }]
keywords = ["playwright", "mcp", "websocket", "server", "pwmcp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "fastapi>=0.110.0",
  "fastmcp>=2.0.0",
  "mcp>=1.22.0",
  "playwright>=1.56.0",
  "uvicorn>=0.30.0",
  "websockets>=13.0",
  "pwmcp-shared"
]

[project.urls]
Homepage = "https://github.com/volkb79-2/vbpub/tree/main/pwmcp"
Source = "https://github.com/volkb79-2/vbpub"
Documentation = "https://github.com/volkb79-2/vbpub/tree/main/pwmcp/docs"

[project.scripts]
pwmcp-server = "pwmcp_server.start_services:main"

# Version derived from git tag `pwmcp-server-vX.Y.Z` by setuptools-scm.
[tool.setuptools_scm]
root = "../.."
tag_regex = "^pwmcp-server-v(?P<version>[0-9].*)$"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "pwmcp-server-v*"]
version_file = "src/pwmcp_server/_version.py"
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pwmcp_server"]
