# Pinned build toolchain for reproducible wheels (see docs/VERSIONING.md).
[build-system]
requires = ["setuptools==82.0.1", "wheel==0.47.0", "setuptools_scm==10.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "pwmcp-shared"
dynamic = ["version"]
description = "Shared types and helpers for PWMCP client and server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Volker Badziong" }]
keywords = ["playwright", "mcp", "pwmcp", "shared"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/volkb79-2/vbpub/tree/main/pwmcp"
Source = "https://github.com/volkb79-2/vbpub"
Documentation = "https://github.com/volkb79-2/vbpub/tree/main/pwmcp/docs"

# Version derived from git tag `pwmcp-shared-vX.Y.Z` by setuptools-scm.
[tool.setuptools_scm]
root = "../.."
tag_regex = "^pwmcp-shared-v(?P<version>[0-9].*)$"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "pwmcp-shared-v*"]
version_file = "src/pwmcp_shared/_version.py"
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pwmcp_shared"]
